# Linux-AI

./: CMakeLists.txt  Makefile  Makemanifest  Makemanifest.py  README.md  pyproject.toml  r1cG9j3JWwMV3BRZ  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: kernel-ai-runtime-issues.md
DE-AI/Plasma-system-AI/: plasma-system-ai.service  setup.py
DE-AI/Plasma-system-AI/Plasma_AI.egg-info/: SOURCES.txt
DE-AI/Plasma-system-AI/plasma_system_ai/: plasma_start.py  writereadout-tens.py  writereadout_tens.py
proc-utils-AI/PCIO-TPU-segonline/: tpu-track-simulation.c
proc-utils-AI/cbinder-gbfs/: ai-affinity.py  ai-analyzer.py  ai-cpufregd.py  ai-greeting.py  ai-lfs.py  ai-voicer.py  cpu-mapping-visualizer.py  simulate_io_stats.py  train_ai_model.py
proc-utils-AI/nproc-kernel/: grant_permission_revoke.c  kernel-start.c
proc-utils-AI/nproc-kernel/include/: AI-LFS.hpp  aistdio.hpp  aistdterm.h  permissioner.h
proc-utils-AI/proc-CPUIO/: cpu-buffer-unit.c  cpu-buffer-unit.h  cpu-sensivity-frogline.c  cpu-sensivity-frogline.h  cpu_metrics_collector.c  cpu_metrics_collector.h  cpufreg-inline.c  cpufreg-inline.h  proc-CPUIO.c  sentielcpu_io_stats.c  sentielcpu_io_stats.h
proc-utils-AI/proc-GPUIO/: gpu-buffer-unit.c  gpu-buffer-unit.hpp  gpu_model_runner.cpp  gpu_model_runner.hpp  proc-GPUIO.cpp
