[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proc-utils-AI"
version = "0.1.0"
description = "AI-powered process and CPU utility tools"
readme = "README.md"
license = {text = "GPL-2.0-only"}
authors = [
  {name = "Zaman Huseyinli", email = "admin@azccriminal.space"}
]
requires-python = ">=3.8"
dependencies = [
  "pyttsx3",
  "psutil",
  "PyYAML",
  "watchdog",
  "matplotlib",
  "seaborn",
  "numpy",
  "torch",
  "scikit-learn",
  "pandas"
]

[project.scripts]
ai-cpufregd = "cbinder-gbfs.ai-cpufregd:main"
ai-voicer = "cbinder-gbfs.ai-voicer:main"
ai-analyzer = "cbinder-gbfs.ai-analyzer:main"
cpu-mapping-visualizer = "cbinder-gbfs.cpu-mapping-visualizer:main"
ai-lfs = "cbinder-gbfs.ai-lfs:main"
train-ai-model = "cbinder-gbfs.train_ai_model:main"
ai-affinity = "cbinder-gbfs.ai-affinity:main"
simulate-io-stats = "cbinder-gbfs.simulate_io_stats:main"
ai-greeting = "cbinder-gbfs.ai-greeting:main"

