[metadata]
name = proc-utils-AI
version = 0.1.0
author = Polat Alemdar
description = AI-powered process and CPU utility tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyttsx3
    psutil
    PyYAML
    watchdog
    matplotlib
    seaborn
    numpy
    torch
    scikit-learn
    pandas

[options.entry_points]
console_scripts =
    ai-cpufregd = cbinder-gbfs.ai-cpufregd:main
    ai-voicer = cbinder-gbfs.ai-voicer:main
    ai-analyzer = cbinder-gbfs.ai-analyzer:main
    cpu-mapping-visualizer = cbinder-gbfs.cpu-mapping-visualizer:main
    ai-lfs = cbinder-gbfs.ai-lfs:main
    train-ai-model = cbinder-gbfs.train_ai_model:main
    ai-affinity = cbinder-gbfs.ai-affinity:main
    simulate-io-stats = cbinder-gbfs.simulate_io_stats:main
    ai-greeting = cbinder-gbfs.ai-greeting:main
